# supa_rs

./: Cargo.toml
src/: auth.rs  client.rs  lib.rs  main.rs  query.rs  storage.rs  utils.rs
tests/: auth.rs  delete.rs  insert.rs  select.rs  storage.rs  update.rs
