[package]
name = "supa_rs"
description = "complete supabase client for rust"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
